Adding initial files

--- a/index.html
+++ b/index.html
@@ -1,67 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
-  <title>Stephen Urena</title>
-
+  <title>About | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
 </head>
 
 <body>
 
-  <header>
-    <div id="headerBar">
-      <div id="navh1">
-        <h1>Stephen Urena</h1>
-      </div>
-      <div id="nav-bar">
-        <a class="nav-content" href="index.html">About</a>
-        <a class="nav-content" href="portfolio.html">Portfolio</a>
-        <a class="nav-content" href="contact.html">Contact</a>
-      </div>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </div>
   </header>
 
-    <div class="mainContainer">
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
 
-      <div class="mainSection">
+      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
 
-        <section id="main-section">
+      <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
 
-          <h2>About Me</h2>
-          <div id="Bio">
+      <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
 
-            <img id="ProfilePicture" src="assets/images/ProfilePicture.jpg" alt="ProfilePicture" >
-              <p>Stephen is a web-development student at the Coding Bootcamp at UC San Diego (yes, I’m speaking in the third-person). He was born and raised in the best city in America (hint hint nudge nudge: San Diego, CA). He tends to get minimal amounts of sleep, because of a full-time job, now school and two energetic boys as shown on the picture, Emiliano- Emi for short (2.5 years, below), and Nicolas, Nico for short (10-months, above). But still finds ways to squeeze time to give them the proper amount of attention, they deserve.</p><br>
-              <p>Stephen tends to ask why for many random things, which I guess pointed him to this course. Like why are they (i.e. developers) getting paid decent money? And why most of them don’t have a degree and still getting paid well, contrary to the conventional wisdom? And why can’t I do that? And now, why didn’t I do this sooner?</p><br>
-              <p>Stephen has concluded that the question of why catches on very fast from hearing it E-V-E-R-Y S-I-N-G-L-E day from his son Emi (the kid that now asks why for everything). </p><br>
-              <p>As discussed in this standup bit by one of my favorite comedians Louis C.K..(Warning Graphic language)</p><br>
+    </section>
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/4u2ZsoYWwJA" allowfullscreen></iframe>
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
 
-          </div>
-        </section>
-
-        <section id="sideBar">
-          <h2>Connect with me</h2>
-          <div class="connect">
-            <a href="https://github.com/stephenurena"><img class="SocialLogo"  src="assets/images/SocialMediaIcons/GitHub-Mark/PNG/GitHub-Mark-120px-plus.png" alt="GitHub Profile"></a>
-            <a href="https://www.linkedin.com/in/stephenmurena"><img class="SocialLogo" src="assets/images/SocialMediaIcons/In-2C-128px-R.png" alt="LinkedIn Profile"></a>
-            <a href="http://stackoverflow.com/users/7305094/stephen-urena"><img class="SocialLogo" src="assets/images/SocialMediaIcons/so-icon.png" alt="StackOverflow Profile"></a>
-          </div>
-        </section>
-
+        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
       </div>
-
-    </div>
-
-  <div class="site-Footer">
-    <p id="pFooter">&copy; Copyright <script type="text/javascript"> document.write(new Date().getFullYear());</script> Stephen Urena
-    </p>
+    </section>
   </div>
 
+  <footer>
+    <div class="container">
+      Copyright &copy; 2016 Your Name
+    </div>
+  </footer>
 </body>
+
 </html>
