--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,18 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Your Name</title>
+  <title>Contact | Stephen Urena</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Stephen Urena</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -58,7 +60,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      Copyright &copy; 2016 Stephen Urena
     </div>
   </footer>
 </body>
